<resources>
    <string name="app_name">SmartTravel</string>
    <string name="smarttravel">SmartTravel</string>
    <string name="create_a_travel_plan">Create a Travel Plan</string>
    <string name="textview">TextView</string>
    <string name="select_a_city">Select a city</string>
    <string name="choose_an_interest_and_activity">Choose an interest and activity</string>
    <string name="select_a_city">Select a city</string>
    <string name="enter_interest_or_activity">Enter interest or activity</string>
    <string name="list_of_countries_relatively_safe_to_travel">List of countries relatively safe to travel</string>
    <string name="enter_duration">Enter duration</string>
</resources>
