<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    app:flow_wrapMode="aligned"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/simpleEditText2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="157dp"
        android:autofillHints=""
        android:gravity="center"
        android:inputType="number"
        android:text="Enter duration in days" />

    <TextView
        android:id="@+id/chooseaninterestoractivity"
        android:layout_width="500dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="348dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="5"
        android:text="@string/choose_an_interest_and_activity"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="20sp"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/duration"
        android:layout_width="402dp"
        android:layout_height="41dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="7dp"
        android:layout_marginTop="481dp"
        android:layout_marginEnd="2dp"
        android:autofillHints=""
        android:ems="5"
        android:text="How long do you want to travel?"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="262dp"
        android:layout_marginEnd="-5dp"
        android:autofillHints=""
        android:ems="5"
        android:text="@string/select_a_city"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="20sp" />

    <TextView
        android:layout_width="500dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="0dp"
        android:
        android:background="#F0C044"
        android:fontFamily="arial"
        android:gravity="left"
        android:padding="5dp"
        android:text="@string/smarttravel"
        android:textColor="#000000"
        android:textSize="40sp"
        android:typeface="monospace"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="83dp"
        android:layout_marginTop="637dp"
        android:layout_marginBottom="46dp"
        android:background="#F0C044"
        android:text="@string/create_a_travel_plan" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/listofcountriestext"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="19dp"
        android:ems="5"
        android:fontFamily="sans-serif"
        android:forceHasOverlappingRendering="true"
        android:gravity="center"
        android:text="@string/list_of_countries_relatively_safe_to_travel"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="20sp" />

    <?xml version="1.0" encoding="utf-8"?>

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="289dp"
        android:layout_marginEnd="-1dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown" />

    <EditText
        android:id="@+id/entertext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="291dp"
        android:autofillHints=""
        android:gravity="center"
        android:inputType="textCapSentences|textAutoCorrect"
        android:singleLine="true"
        android:text="@string/enter_interest_or_activity"
        tools:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="112dp" />


</RelativeLayout>

